add background image

--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@ body{
 p{
   text-align: center;
   font-size:20px;
+ 
 }
 #descri{
-  font-size: 30px;
+  font-size: 24px;
   color:beige;
 }
 h1{
   text-align: center;
+  color:ghostwhite;
 }
