--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   margin:5px;
   padding:5px;
   border:5px;
-  background-image: url("https://i.pinimg.com/originals/3e/7e/d3/3e7ed3d6e247fbd5080a172850eba39a.jpg");
+  background-image: url("https://images4.alphacoders.com/795/thumb-1920-795925.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
