change background image

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   margin:5px;
   padding:5px;
   border:5px;
-  background-image: url("https://images4.alphacoders.com/795/thumb-1920-795925.jpg");
+  background-image: url("https://www.aajkikhabar.com/wp-content/uploads/2019/05/XlTE0o.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
