--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   margin:5px;
   padding:5px;
   border:5px;
-  background-image: url("https://www.aajkikhabar.com/wp-content/uploads/2019/05/XlTE0o.jpg");
+  background-image: url("https://images.unsplash.com/photo-1535332371349-a5d229f49cb5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -13,7 +13,7 @@ p{
 }
 #descri{
   font-size: 24px;
-  color:thistle;
+  color:beige;
 }
 h1{
   text-align: center;
