--- a/style.css
+++ b/style.css
@@ -42,5 +42,9 @@ li{
   width: 50%;
 }
 .list{
-  background-color:black;
+  background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNQTsS8WXQwKU2IPmqTpj2WP6ZI3qdMFLq6_CzYWtvDOvYiG15");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width:700px;
+  margin-left:20%;
 }
