add width to the background image

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ li{
   width: 50%;
 }
 .list{
-  background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNQTsS8WXQwKU2IPmqTpj2WP6ZI3qdMFLq6_CzYWtvDOvYiG15");
+  background-image:url("https://www.pixel-creation.com/wp-content/uploads/plain-dark-blue-backgroundlythronax-on-deviantart-800x800.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width:700px;
